--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,19 +5,30 @@
 
 body {
   margin: 0;
-  width: auto;
-  height: auto;
-  overflow: hidden;
-}
-
-.webGl-Wrapper {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
 }
 
+html,
+#__next {
+  overflow: hidden;
+}
+
+.webGl-Wrapper {
+  overflow: hidden;
+}
 
 .webGl-canvas {
   width: 100%;
   height: 100%;
+  width: 100vw;
+  height: 100vh;
+}
+
+.mui-switch-wrapper {
+  position: fixed;
+  top: .5em;
+  right: .5em;
+  z-index: 2;
 }
