--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,34 @@ body,
   z-index: 2;
 }
 
+/* Music Play Icon */
+.musicPlayWrapper {
+  position: fixed;
+  bottom: .5em;
+  left: .5em;
+  cursor: pointer;
+  display: none;
+  z-index: 2;
+}
+
+.musicPlayControlIcons {
+  opacity: 0;
+  transform: translateY(20px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  transition: all 500ms ease-out;
+}
+
+.musicPlayWrapper:hover .musicPlayControlIcons {
+  opacity: 1;
+  transform: translateY(0px);
+}
 
 /* Loading Overlay */
 .loading-wrapper {
